[package]
name = "xvdl"
version = "0.1.0"
edition = "2021"
authors = ["Meowu <474384902@qq.com>"]
license = "MIT"
description = "A Rust library for downloading X/Twitter videos."
repository = "https://github.com/Meowu/xvdl"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ['http', 'axum'] }
worker-macros = { version = "0.5.0", features = ['http'] }
console_error_panic_hook = { version = "0.1.1" }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
